# TmpTestMd2View

./: README.md
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/: basic.vert
app/src/main/assets/shaders/: basic.vsh
app/src/main/cpp/: CMakeLists.txt  GlObj.cpp  GlObj.h  GlobalSpaceObj.h  Jni.cpp  MD2Model.cpp  MD2Model.h  Md2Obj.cpp  Md2Obj.h  Renderer.cpp  Renderer.h  ShaderProgram.cpp  ShaderProgram.h  TexObj.cpp  Texture2D.cpp  Texture2D.h
app/src/main/cpp/opengl/: CMakeLists.txt  Jni.cpp  MD2Model.cpp  Renderer.cpp  ShaderProgram.cpp  ShaderProgram.h  native-lib.cpp
app/src/main/cpp/third_party_libraries/stb_image/: stb_image.h
app/src/main/java/com/tks/cppmd2viewer/: Jni.kt  MainActivity.kt  MyRenderer.kt
app/src/main/res/layout/: activity_drawing.xml
